fix bug with slider on iphone

--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -10,7 +10,7 @@
   transition: border-radius 0.5s;
 
   @media (max-width: 1601px) {
-    border-bottom-right-radius: 0;
+    border-radius: 0 0 200px;
   }
 
       
@@ -83,8 +83,6 @@
   }
 
   &__slider {
-
-    
     position: absolute;
     right: 0;
     bottom: 0;
