--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -27,6 +27,10 @@
     opacity: 0;
 
     transition: opacity 1s;
+
+    @media (max-width: 900px) {
+      border-radius: 50px;
+    }
     
     &--previous {
       transform: translateX(-100%);
